fix: z-index

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ body {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  z-index: 2;
 }
 
 .toggle-options img {
@@ -43,7 +42,6 @@ body {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   border-radius: 0.5rem;
-  z-index: 2;
   cursor: auto;
 }
 
@@ -95,7 +93,6 @@ body {
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   border-radius: 0.3rem;
   padding: 0.5rem 0 0.5rem 0.5rem;
-  z-index: 2;
   cursor: auto;
 }
 
@@ -205,7 +202,6 @@ body {
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   border-radius: 0.3rem;
   padding: 0.5rem;
-  z-index: 2;
   cursor: auto;
   flex-direction: column;
   gap: 0.3rem;
@@ -229,7 +225,6 @@ body {
   border-radius: 0.3rem;
   padding: 0.5rem;
   gap: 0.5rem;
-  z-index: 2;
   cursor: auto;
   flex-direction: column;
 }
@@ -354,11 +349,6 @@ body {
 
 .drag-handle {
   cursor: pointer;
-}
-
-canvas {
-  position: relative;
-  z-index: 1;
 }
 
 .shapes {
